# hikogui-hello-world

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTORS.md  README.md  package.json.in  vcpkg.json
.github/: appveyor.yml
.github/workflows/: build-on-win64-fetch.yml  build-on-win64-vcpkg.yml  build-on-win64.yml  build-on-windows.yml
CMake/: PostStagingScript.cmake  SetupCompiler.cmake  SetupVcpkg.cmake
CPack/: welcome.txt
data/: hello_world.pot
data/cpack/: readme.txt  welcome.txt
data/locale/: en.po
docs/: build_with_msvc_on_windows.md  build_with_msvc_on_windows_with_vcpkg.md  build_with_visual_studio.md  build_with_visual_studio_and_vcpkg.md  customize.md
resources/: nl.po
scripts/: create_pot.sh
src/: current_version.hpp.in  main.cpp  metadata.hpp.in
vcpkg-overlay-ports/hikogui/: portfile.cmake
vcpkg-overlay-ports/ttauri/: portfile.cmake  vcpkg.json
vcpkg-overlay/hikogui/: portfile.cmake
